# schism

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
landing/: index.html
src/schism/: __init__.py  __main__.py  cli.py  server.py
src/schism/engine/: features.py  generate.py  loader.py  steering.py
src/schism/presets/: manager.py
src/schism/presets/defaults/: academic.json  chaos.json  concise.json  creative.json  eli5.json  formal.json  noir.json  pirate.json  robot.json  sarcastic.json  zen.json
src/schism/static/: index.html
src/schism/static/css/: style.css
src/schism/static/js/: app.js  sliders.js  stream.js
tests/: test_features.py  test_presets.py  test_server.py  test_steering.py
