[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schism"
version = "0.1.0"
description = "Reshape how AI thinks, one slider at a time"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "sae-lens>=0.5.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "huggingface-hub>=0.20.0",
    "websockets>=12.0",
]

[project.scripts]
schism = "schism.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
schism = ["static/**/*", "presets/defaults/*.json"]
